--- a/sec18/.htaccess
+++ b/sec18/.htaccess
@@ -1,3 +1,9 @@
 Options -Indexes
-Deny from README.md
-Deny from DEADME.pdf
+<files README.md>
+Order Allow,Deny 
+Deny from all 
+</files>
+<files README.pdf>
+Order Allow,Deny 
+Deny from all 
+</files>
