--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "utility": "cpp",
         "c3.C": "cpp",
         "c6.C": "cpp",
-        "__functional_03": "c"
+        "__functional_03": "c",
+        "iomanip": "cpp"
     }
 }
